--- a/templates/query.html
+++ b/templates/query.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <title>Money Project</title>
-<head></head>
+<head>
+    <link href="{{ url_for('static', filename='css/style.scss.css') }}"
+      rel="stylesheet" type="text/css">
+</head>
 <body>
 <h1>
     Welcome to the Patent Project Classification System
