added html template

--- a/templates/query.html
+++ b/templates/query.html
@@ -8,6 +8,8 @@
 <h1>
     Welcome to the Patent Project Classification System
 </h1>
+<script type="text/javascript" src="http://www.freecodeformat.com/res/xreturntop/x-return-top.min.js"></script>
+<script type="text/javascript" color="0,100,200" opacity="0.4" src="http://www.freecodeformat.com/js/canvas-nest.min.js"></script>
 
  <form action="/query" method="POST">
      <p><textarea type=text name=title placeholder="Title"></textarea></p>
