Fixing app design

--- a/templates/query.html
+++ b/templates/query.html
@@ -6,11 +6,11 @@
 </head>
 
 <body>
-   <script type="text/javascript" src="http://www.freecodeformat.com/res/xreturntop/x-return-top.min.js"></script>
-<script type="text/javascript" color="0,100,200" opacity="0.4" src="http://www.freecodeformat.com/js/canvas-nest.min.js"></script>
+<script type="text/javascript" src="http://www.freecodeformat.com/res/xreturntop/x-return-top.min.js"></script>
+<script type="text/javascript" color="0,100,200" opacity="0.7" src="http://www.freecodeformat.com/js/canvas-nest.min.js"></script>
 <div class="container">
 <h1>
-    Welcome to the Patent Project Classification System
+    Welcome to the Patent Art Unit Classification System
 </h1>
 
 
