--- a/static/style.css
+++ b/static/style.css
@@ -1,11 +1,11 @@
 body            { font-family: sans-serif; background: #eee; }
 a, h1, h2       { color: #377ba8; }
 h1, h2          { font-family: 'Georgia', serif; margin: 0; }
-h1              { border-bottom: 2px solid #eee; }
+h1              { border-bottom: 2px solid #eee; text-align: center; }
 h2              { font-size: 1.2em; }
 textarea        { width: 100%;}
-div.container   { width:50%; margin-left:auto; margin-right:auto}
-div.container2  { width:50%; margin-left:auto; margin-right:auto}
+div.container   { width:65%; margin-left:auto; margin-right:auto}
+div.container2  { width:65%; margin-left:auto; margin-right:auto}
 div.form-button { width:100%; margin-left:auto; margin-right:auto }
 .page           { margin: 2em auto; width: 35em; border: 5px solid #ccc;
                   padding: 0.8em; background: white; }
