final final final fix

--- a/templates/query.html
+++ b/templates/query.html
@@ -29,6 +29,10 @@
         </form>
     </div>
 
+{% if group %}
+<p><font color="blue">{{ group }}</font></p>
+{% endif %}
+
 
 {% if error %}
 <p><font color="red">{{ error }}</font></p>
