--- a/templates/query.html
+++ b/templates/query.html
@@ -15,7 +15,7 @@
 
     <div class="container_right">
     {% if group %}
-    <h2><font color="blue">{{ group[0] }}</font></h2>
+    <h2><font color="blue">{{ group }}</font></h2>
     {% endif %}
 
     {% if error %}
