--- a/templates/query.html
+++ b/templates/query.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>Artunit Classifier App</title>
+<title>Art Unit Classifier App</title>
 <head>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 
@@ -15,7 +15,7 @@
 
     <div class="container_right">
     {% if group %}
-    <h2><font color="blue">{{ group }}</font></h2>
+    <h2><font color="blue">{{ group[0] }}</font></h2>
     {% endif %}
 
     {% if error %}
